# enterprise-ai-control-plane

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  PROJECT_MEMORY.md  README.md  ROADMAP.md  VISION.md  dashboard.py  pyproject.toml
docs/: MODULE_CATALOG.md
docs/adr/: 0001-foundation-modular-monolith-and-integration.md  0002-auth-and-tenancy.md  0003-ai-gateway.md  0004-prompt-registry.md  0005-evaluation-engine.md  0006-observability.md  0007-operator-dashboard.md  0008-agent-builder.md  0009-ai-delivery-manager.md
src/control_plane/: __init__.py  app.py
src/control_plane/agents/: __init__.py  models.py  planner.py  routes.py  schemas.py  service.py  tools.py
src/control_plane/core/: __init__.py  api.py  config.py  db.py  deps.py  models.py  rbac.py  routes.py  schemas.py  service.py
src/control_plane/dashboard/: __init__.py  data.py
src/control_plane/delivery/: __init__.py  models.py  routes.py  schemas.py  service.py
src/control_plane/evals/: __init__.py  evaluators.py  models.py  routes.py  schemas.py  service.py
src/control_plane/gateway/: __init__.py  models.py  providers.py  router.py  routes.py  schemas.py  service.py
src/control_plane/observability/: __init__.py  models.py  routes.py  schemas.py  service.py  tracer.py
src/control_plane/prompts/: __init__.py  models.py  routes.py  schemas.py  service.py
tests/: test_agents.py  test_app.py  test_core_api.py  test_dashboard_data.py  test_delivery.py  test_evals.py  test_gateway.py  test_observability.py  test_prompts.py  test_rbac.py
