[project]
name = "enterprise-ai-control-plane"
version = "0.1.0"
description = "A modular control plane for running enterprise AI: gateway, model routing, prompt registry, evals, cost & observability."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
control-plane = "control_plane.app:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "control_plane"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
